--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 34
 
     defaultConfig {
         applicationId "com.android.customlistview"
-        minSdkVersion 16
-        targetSdkVersion 33
+        minSdkVersion 17
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
 
@@ -19,6 +19,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.android.customlistview'
 
 }
 
@@ -31,5 +32,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
-
+    implementation group: 'org.yaml', name: 'snakeyaml', version: '2.0'
 }
