--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 34
 
     defaultConfig {
-        applicationId "com.android.customlistview"
+        applicationId 'com.android.ctisandbox'
         minSdkVersion 17
         targetSdkVersion 34
         versionCode 1
@@ -19,7 +19,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    namespace 'com.android.customlistview'
+    namespace 'com.android.ctisandbox'
 
 }
 
